--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.5.1",
+    "@supabase/supabase-js": "^2.44.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "prisma": "^5.4.2"
   }
 }
